Fixed alignment for mobile

--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -562,6 +562,21 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+@media (max-width: 991px) {
+  .header-content {
+    /* margin-left: -60px; */
+    padding: 0 20vw;
+    text-align: center;
+  }
+  .header-title, .header-subtitle {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .btn {
+    display: inline-block;
+    margin: 10px auto;
+  }
+}
 
 @media (min-width: 576px) {
   .container {
@@ -2749,6 +2764,9 @@ textarea.form-control {
 
 /* Center alignment styles */
 .header-content {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
   text-align: center;
 }
 
@@ -12098,7 +12116,7 @@ pre .code {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  max-width: 1000px;
+  /* max-width: 1100px; */
 }
 
 .header .header-content .header-title .up {
